--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,18 +1,19 @@
 # FastAPI Backend Dependencies
+# Updated: January 19, 2025
 
 # Core Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-dotenv==1.0.0
+fastapi==0.121.2
+uvicorn[standard]==0.38.0
+python-dotenv==1.2.1
 
 # Database & ORM
-supabase==2.3.0
+supabase==2.24.0
 sqlalchemy==2.0.25
-asyncpg==0.29.0
+asyncpg==0.30.0
 
 # Validation & Serialization
-pydantic==2.5.3
-pydantic-settings==2.1.0
+pydantic==2.12.4
+pydantic-settings==2.12.0
 
 # Auth & Security
 python-jose[cryptography]==3.3.0
@@ -20,25 +21,25 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
 # HTTP Client
-httpx==0.26.0
-aiohttp==3.9.1
+httpx==0.28.1
+# aiohttp==3.9.1  # Skipped: requires C++ compiler on Windows
 
 # Search
-meilisearch==0.28.3
+meilisearch==0.38.0
 
 # Caching
-redis==5.0.1
-hiredis==2.3.2
+redis==7.0.1
+# hiredis==2.3.2  # Skipped: requires C++ compiler on Windows (optional performance boost)
 
 # AI Services
 google-generativeai==0.3.2
 anthropic==0.8.1
 
 # Payment
-paystack==1.5.1
+paystack==1.5.0
 
 # Monitoring & Logging
-sentry-sdk==1.39.2
+sentry-sdk[fastapi]==2.24.0
 python-json-logger==2.0.7
 
 # Task Scheduling
@@ -46,13 +47,12 @@ apscheduler==3.10.4
 rq==1.15.1
 
 # Development & Testing
-pytest==7.4.4
-pytest-asyncio==0.23.3
-pytest-cov==4.1.0
-httpx==0.26.0
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
 faker==22.0.0
 
 # Code Quality
-black==24.1.1
-ruff==0.1.11
-mypy==1.8.0
+black==25.1.0
+ruff==0.8.6
+mypy==1.14.1
