feat: Implement Phase 6 MVP - Data Pipeline with Scrapy
Implemented production-quality, extensible data pipeline for scraping
Nigerian educational institution data. MVP includes 2 working spiders
with full validation and Supabase sync.

## Architecture

### Base Infrastructure (Production-Ready):
- BaseSpider class with reusable functionality
- InstitutionSpiderMixin for common patterns
- Helper methods for data extraction and cleaning
- Automatic metrics tracking and error handling
- Hash-based deduplication
- Rate limiting and politeness

### Data Models (Full Validation):
- 5 Pydantic models with comprehensive validation
- InstitutionItem, ProgramItem, ApplicationWindowItem, CostItem, ContactItem
- Nigerian state validation (37 states + FCT)
- Email, URL, phone validation
- Business rule validation (years, amounts, dates)

### Pipelines:
- Validation pipeline with schema + business rules
- Supabase sync pipeline with upserts
- Duplicate filtering
- Metadata tracking (source_url, scrape_timestamp)

## Implementation (4,630 lines of code)

### Core Files (12 files):

**Data Models:**
- items/models.py (352 lines) - 5 Pydantic models

**Spiders:**
- spiders/base_spider.py (443 lines) - Reusable base class
- spiders/unilag_spider.py (249 lines) - UNILAG institution + programs
- spiders/oau_spider.py (252 lines) - OAU institution + programs

**Pipelines:**
- pipelines/validation.py (361 lines) - Multi-layer validation
- pipelines/supabase_sync.py (521 lines) - Database sync with upserts

**Configuration:**
- config/sources.yaml - 3 institutions configured (UNILAG, UI, OAU)
- config/settings.py - Scrapy settings with pipeline order

**Testing:**
- tests/test_spiders.py (332 lines) - 20 unit tests

**Setup:**
- setup.sh - Unix/Linux/Mac setup script
- setup.ps1 - Windows PowerShell setup script

**Documentation:**
- README.md - Quick start guide
- PHASE6_MVP_IMPLEMENTATION.md - Complete implementation guide (1800+ lines)
- IMPLEMENTATION_SUMMARY.md - Executive summary (

--- a/services/scrapers/config/sources.yaml
+++ b/services/scrapers/config/sources.yaml
@@ -24,6 +24,17 @@ institutions:
       schedule: daily
       requires_js: false
 
+  - id: oau
+    name: Obafemi Awolowo University
+    url: https://oauife.edu.ng
+    type: federal_university
+    state: Osun
+    scrape_config:
+      programs_url: https://oauife.edu.ng/programmes
+      admissions_url: https://oauife.edu.ng/admissions
+      schedule: daily
+      requires_js: false
+
   # Add more institutions here
   # Template:
   # - id: institution_slug
