--- a/services/scrapers/requirements.txt
+++ b/services/scrapers/requirements.txt
@@ -28,6 +28,8 @@ pyyaml==6.0.1
 # Utilities
 fake-useragent==1.4.0
 w3lib==2.1.2
+python-slugify==8.0.1
+pydantic==2.5.3
 
 # Development & Testing
 pytest==7.4.4
