--- a/render.yaml
+++ b/render.yaml
@@ -73,7 +73,7 @@ services:
   - type: web
     name: admitly-web
     env: static
-    buildCommand: "cd apps/web && pnpm install && pnpm build"
+    buildCommand: "pnpm install && cd apps/web && vite build"
     staticPublishPath: apps/web/dist
     pullRequestPreviewsEnabled: true
     autoDeploy: true
