--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -14,6 +14,7 @@ asyncpg==0.30.0
 # Validation & Serialization
 pydantic==2.12.4
 pydantic-settings==2.12.0
+email-validator==2.1.0
 
 # Auth & Security
 python-jose[cryptography]==3.3.0
