fix: Correct health check path from /api/v1/health to /health
- Backend health endpoint is at /health not /api/v1/health
- This will fix the failing health checks

--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     plan: free  # Free tier for MVP
     buildCommand: "cd services/api && pip install -r requirements.txt"
     startCommand: "cd services/api && uvicorn main:app --host 0.0.0.0 --port $PORT"
-    healthCheckPath: /api/v1/health
+    healthCheckPath: /health
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
