--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,10 +4,13 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -15,27 +18,47 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
     /* Path Mapping */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@admitly/ui": ["../../packages/ui/src"],
-      "@admitly/types": ["../../packages/types/src"],
-      "@admitly/api-client": ["../../packages/api-client/src"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@admitly/ui": [
+        "../../packages/ui/src"
+      ],
+      "@admitly/types": [
+        "../../packages/types/src"
+      ],
+      "@admitly/api-client": [
+        "../../packages/api-client/src"
+      ]
     }
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "references": [
-    { "path": "./tsconfig.node.json" },
-    { "path": "../../packages/ui" },
-    { "path": "../../packages/types" },
-    { "path": "../../packages/api-client" }
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "../../packages/ui"
+    },
+    {
+      "path": "../../packages/types"
+    },
+    {
+      "path": "../../packages/api-client"
+    }
+  ],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx"
   ]
 }
